Fix overflow

--- a/src/components/Swipe/index.module.css
+++ b/src/components/Swipe/index.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 }
 
